--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,12 +74,12 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Poppins
+    - family: SuisseIntl
       fonts:
-        - asset: fonts/Poppins-Regular.ttf
-        - asset: fonts/Poppins-Bold.ttf
+        - asset: fonts/SuisseIntl-Regular.otf
+        - asset: fonts/SuisseIntl-Bold.otf
           weight: 700
-        - asset: fonts/Poppins-SemiBold.ttf
+        - asset: fonts/SuisseIntl-SemiBold.otf
           weight: 600
   #   - family: Trajan Pro
   #     fonts:
